--- a/pets.html
+++ b/pets.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <a href = "#main" class = "skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -68,6 +70,12 @@
             <img src = "images/charli_boat.jpeg" width = "200" alt = "Charli on a boat">
             <img src = "images/charli_puppy.jpeg" width = "200" alt = "Charli when Charli was a puppy">
             <img src = "images/charli_laying.jpeg" width = "200" alt = "Charli laying down on the floor">
+
+            <h3>Likes</h3>
+            <ul>
+                <li>The color yellow</li>
+                <li>Napping</li>
+            </ul>
         </div>
     </main>
     
