--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main" class = "skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -21,7 +21,7 @@
         <h1>Tawseef Rahman</h1>
 
     </header>
-    <main>
+    <main id="main">
         <div>
             <p>Welcome to Tawseef Rahman's website, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
 
