--- a/recipes.html
+++ b/recipes.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
 <body>
-    <a href="#main">Skip to Main Content</a>
+    <a href = "#main" class = "skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
