--- a/travel.html
+++ b/travel.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Travel</title>
 </head>
 <body>
-    <a href="#main">Skip to Main Content</a>
+    <a href = "#main" class = "skip">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -16,6 +18,7 @@
                 <li class="active"><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
+        <h1>Travel</h1>
     </header>
     <main id="main">
         <div>
